--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,9 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^8.0"
     },
     "require-dev": {
-
         "phpunit/phpunit": "^9.5",
         "phpstan/phpstan": "^0.12.83",
         "squizlabs/php_codesniffer": "^3.5"
