--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "phpstan/phpstan": "^0.12.83",
-        "squizlabs/php_codesniffer": "^3.5"
+        "laravel/pint": "^1.11",
+        "phpstan/phpstan": "^1.10"
     },
     "scripts": {
         "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon",
-        "phpcs": "vendor/bin/phpcs",
+        "pint": "vendor/bin/pint",
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
@@ -32,4 +32,3 @@
         "FredBradley\\EasyTime\\Tests\\": "tests"
     }
 }
-
