--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ['8.0',8.1,8.2]
+        php: [8.1,8.2]
         os: [windows-latest, ubuntu-latest]
 
-    runs-on: ${{ matrix.os }}    
+    runs-on: ${{ matrix.os }}
 
     name: PHP ${{ matrix.php}} on ${{ matrix.os}} Test
 
@@ -32,7 +32,7 @@ jobs:
           ini-values: error_reporting=E_ALL
           tools: composer:v2
           coverage: none
-          
+
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
 
